<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coor_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="RtlHardcoded"
    tools:context=".ui.detail.DetailMoviewActivity">

    <!-- Terdapat 2 element tampilan yaitu bagian highlight dan decription. -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <!-- Bagian highlight terdapat bagian judul, gambar poster item dan toolbar back. -->
        <!-- Serta terdapat element untuk gradasi tampilan. -->
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collaps"
            android:layout_width="match_parent"
            android:layout_height="600dp"
            app:title="Title"
            android:textSize="34sp"
            android:fontFamily="@font/montserrat"
            app:expandedTitleMarginBottom="100dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?colorPrimary">

            <!-- Poster -->
            <ImageView
                android:id="@+id/img_item_poster_detail"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/poster_naruto_shipudden"
                tools:ignore="ContentDescription"/>

            <!-- Element Gradasi -->
            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:src="@drawable/screen_shadow"
                tools:ignore="ContentDescription" />


            <!-- Back Toolbar -->
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@null"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/abc_ic_ab_back_material" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <!-- Bagian description terdapat detail yang berisi realease & genre, -->
    <!-- title description dan item description detail. -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:behavior_overlapTop="80dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/moview_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                app:contentPaddingBottom="18dp"
                app:contentPaddingLeft="18dp"
                app:contentPaddingRight="18dp"
                app:cardBackgroundColor="@color/cardview_dark_background"
                app:cardCornerRadius="10dp"
                app:cardElevation="6dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <!-- Realease & Genre -->
                    <TextView
                        android:id="@+id/tv_detail_realease_genre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/realease_genre"
                        android:textSize="12sp"
                        android:fontFamily="@font/montserrat"
                        android:textStyle="bold"
                        android:textColor="@android:color/primary_text_dark"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <!-- Title Description -->
                    <TextView
                        android:id="@+id/tv_detail_title_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        android:gravity="center_vertical"
                        android:minHeight="30dp"
                        android:text="@string/description"
                        android:textSize="16sp"
                        android:fontFamily="@font/montserrat"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:textColor="@android:color/primary_text_dark"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_detail_realease_genre" />

                    <!-- Item Description -->
                    <TextView
                        android:id="@+id/tv_detail_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:lineSpacingExtra="4dp"
                        android:text="@string/description_detail"
                        android:textSize="14sp"
                        android:fontFamily="@font/montserrat"
                        android:textColor="@android:color/secondary_text_dark"
                        app:layout_constraintTop_toBottomOf="@+id/tv_detail_title_description" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>